--- a/styles.css
+++ b/styles.css
@@ -157,3 +157,9 @@ h1{
     color: white;
 }
 
+@media only screen and (max-width: 600px) {
+  body {
+    background-size: contain;
+    background-repeat: repeat;
+  }
+}
